fix: artwork mobile interactivity

--- a/.editorconfig
+++ b/.editorconfig
@@ -14,7 +14,7 @@ trim_trailing_whitespace = true
 indent_style = tab
 indent_size = 4
 
-[{.jshintrc,*.html,*.json,*.yml,*.js,*.jsx,*.ts,*.tsx,*.vue}]
+[{.jshintrc,*.html,*.json,*.yml,*.js,*.jsx,*.ts,*.tsx,*.vue,*.css}]
 indent_style = space
 indent_size = 2
 
